(feat): adiciona criação de ponto médio por coluna
